# 3LO

./: .gitignore  DND_FIX_PLAN.md  FILE_ORGANIZATION.md  MEMORY.md  README.md  REQUIREMENTS.md  ROADMAP.md  SHORTCUTS.md  package-lock.json  package.json  piano_azione_aura.json  piano_azione_backup.json  vite.config.js
.github/workflows/: build.yml
scalette/: scala_2025-03-05_3lo.json  scala_2025-03-05_finale.json  scala_2025-03-05_revisata.json  scala_2025-03-05_valido.json
src/: auth.js  auth_ui.js  board.html  board.js  color_picker.js  db.js  db_sqlite.js  diagnostic.js  home.js  import_handler.js  import_handler.js.backup_20260304  index.html  logger.js  main.js  package-lock.json  package.json  settings.js  settings_manager.js  settings_sidebar.html  sidebar_css.txt  style.css  template_ai.js
src-tauri/: 3LO_AI_template.json  Cargo.toml  HOME  aura___carlo___marted__3lo.json  tauri.conf.json
src-tauri/IMPORT/: piano_azione_backup.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs
