[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/tauri-plugin-sql", branch = "dev" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
